# ComfyUI-Touch-Gestures

./: README.md  pyproject.toml
web/: simpleTouchSupport.js
